--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,14 +9,23 @@ updates:
     directory: /
     open-pull-requests-limit: 50
     schedule:
-      interval: daily
+      interval: monthly
   - package-ecosystem: gradle
     directory: /
     open-pull-requests-limit: 50
     schedule:
-      interval: daily
+      interval: monthly
+  - package-ecosystem: gradle
+    directory: /buildSrc
+    registries:
+      - maven-central
+      - maven-snapshots
+      - creek-github-packages
+    open-pull-requests-limit: 50
+    schedule:
+      interval: monthly
   - package-ecosystem: docker
     directory: /handle-occurrence-service
     open-pull-requests-limit: 50
     schedule:
-      interval: daily
+      interval: monthly
